--- a/package.json
+++ b/package.json
@@ -11,24 +11,29 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-community/datetimepicker": "6.1.2",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.5.0",
     "@react-navigation/stack": "^6.2.1",
     "expo": "^45.0.5",
+    "expo-asset": "~8.5.0",
+    "expo-av": "~11.2.3",
+    "expo-device": "~4.2.0",
+    "expo-file-system": "~14.0.0",
+    "expo-notifications": "~0.15.2",
+    "expo-sqlite": "~10.2.0",
     "expo-status-bar": "~1.3.0",
+    "firebase": "^9.8.3",
     "react": "17.0.2",
     "react-clock": "^3.1.0",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-audio-stream": "^2.6.1",
+    "react-native-dropdown-picker": "^5.4.2",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
-    "react-time-picker": "^4.5.0",
-    "@react-native-community/datetimepicker": "6.1.2",
-    "expo-av": "~11.2.3",
-    "expo-notifications": "~0.15.2",
-    "expo-device": "~4.2.0"
+    "react-time-picker": "^4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
